redesigned, balls on last page, anim logo

--- a/style.css
+++ b/style.css
@@ -40,93 +40,6 @@ body {
 
 }
 
-.unna-dots-wrapper {
-    /* visibility: hidden; */
-    position: absolute;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 300px;
-    width: 100%;
-    /* background-color: green; */
-    z-index: 1000;
-    scale: 1.3;
-    overflow: hidden;
-}
-
-.unna-dots-wrapper img {
-    position: absolute;
-    width: 1900px;
-    height: 1900px;
-    /* image-rendering: auto; */
-}
-
-.unna-just-text {
-    /* transform: translateY(10px); */
-    z-index: 3000;
-    pointer-events: none;
-
-}
-
-/* .unna-dots-wrapper .nopat {
-    width: 1900px;
-    height: 1900px;
-    z-index: 1200;
-    mix-blend-mode: screen;
-} */
-
-.unna-dots {
-    position: absolute;
-    top: 26%;
-    left: 50%;
-    height: 200px;
-    width: 200px;
-    /* scale: 1; */
-    background: url(/img/bg-pattern.png);
-    background-size: 600%;
-    clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    z-index: 1000;
-    transform-origin: center;
-    transform: translateX(-50%);
-    /* transform: translateY(-50%); */
-    animation: dotanim 10s ease-in-out infinite;
-}
-
-@keyframes dotanim {
-    0% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-    15% {
-        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
-    }
-
-    30% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-62.02,2.06-90.3,25.46C16.28,52.4.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-    50% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,22.15-33.53,31.5-53.36,5.72-9.4,10.56-25.2,2.21-32.72Z');
-    }
-    60% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,31.79-17.2,46.26-32.22,15.08-15.84,38.69-23.08,48.03-42.91,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-
-    70% {
-        clip-path: path('M188.96,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.4,21.72,170.37,1.74,133.39,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.88,83.89.02,126.49c-.27,16.62,2.29,25.32,13.42,37.12,10.7,11.34,19.92,12.81,45.59,13.73,2.17-.53,23.04,10.65,24.96,11.58,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-    85% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,8.68-13.98,9.27-20.32C200.01,19.97,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-    90% {
-        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
-    }
-
-    100% {
-        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    }
-    
-}
-
 main {
     position: absolute;
     height: 100%;
@@ -138,7 +51,7 @@ main {
 
 section {
     position: relative;
-    padding: 56px 24px;
+    padding: 24px 24px;
     overflow-y: scroll;
 
     scroll-snap-align: start;
@@ -162,11 +75,12 @@ section {
 
     /* background: black; */
     height: fit-content;
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
 }
 
 .section-open {
     background: linear-gradient(var(--unnaGreen) 40%, var(--unnaOrange));
+    padding-bottom: 0px;
 }
 
 .logo-wrapper {
@@ -175,8 +89,113 @@ section {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
     /* background-color: orange; */
 }
+
+
+.unna-anim-logo-wrapper {
+    position: relative;
+    top: 0;
+    flex: 1.25;
+    /* height: 40%; */
+    width: 100%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    /* background-color: #d39c95; */
+}
+
+.unna-anim-logo-container {
+    /* visibility: hidden; */
+    position: relative;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    width: fit-content;
+    scale: 1.25;
+    /* scale: 2; */
+    transform-origin: bottom;
+    /* background-color: green; */
+    z-index: 1;
+    overflow: hidden;
+}
+
+.unna-anim-logo-container img {
+    position: absolute;
+    width: 542%;
+    height: 542%;
+    object-fit: cover;
+}
+
+.unna-just-text {
+    padding-right: 2px;
+    padding-top: 16px;
+    z-index: 5000;
+
+}
+
+.nopat {
+    z-index: 3000;
+    mix-blend-mode: screen;
+    padding-bottom: 4px;
+}
+
+.unna-dots {
+    position: relative;
+    left: 1px;
+    height: 200px;
+    width: 200px;
+    background: url(/img/bg-pattern.png);
+    background-size: 600%;
+    clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    z-index: 1000;
+    /* transform-origin: left; */
+    /* transform: translate(-49%, 2px); */
+    /* transform: translateY(-50%); */
+    animation: dotanim 15s ease-in-out infinite;
+}
+
+@keyframes dotanim {
+    0% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    30% {
+        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
+    }
+
+    45% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-62.02,2.06-90.3,25.46C16.28,52.4.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    55% {
+        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
+    }
+    60% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,22.15-33.53,31.5-53.36,5.72-9.4,10.56-25.2,2.21-32.72Z');
+    }
+    70% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,31.79-17.2,46.26-32.22,15.08-15.84,38.69-23.08,48.03-42.91,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+
+    75% {
+        clip-path: path('M188.96,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.4,21.72,170.37,1.74,133.39,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.88,83.89.02,126.49c-.27,16.62,2.29,25.32,13.42,37.12,10.7,11.34,19.92,12.81,45.59,13.73,2.17-.53,23.04,10.65,24.96,11.58,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    85% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,8.68-13.98,9.27-20.32C200.01,19.97,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    90% {
+        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
+    }
+
+    100% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    
+}
+
 
 .logo img {
     /* visibility: hidden; */
@@ -212,8 +231,8 @@ section {
 
 .photo-item img {
     position: relative;
-    border: 4px dotted white;
-    border-radius: 48px;
+    border: 4px solid white;
+    /* border-radius: 48px; */
     width: 100%;
     height: auto;
     object-fit: contain;
@@ -224,13 +243,15 @@ section {
 
 
 .photo-text {
-    font-size: 1.5rem;
-    position: absolute;
+    font-size: 2rem;
+    /* position: absolute; */
     top: 15%;
     left: -8px;
-    background-color:white;
+    /* background-color:white; */
     color: var(--unnaGreen);
-    padding: 4px;
+    color: white;
+    text-align: start;
+    /* padding: 4px; */
 }
 
 .address, .open {
@@ -260,7 +281,7 @@ section {
 
 .social {
     padding-top: 16px;
-    flex: 1;
+    flex: 1.2;
     width: 100%;
     gap: 8px;
     /* background-color: teal; */
@@ -273,6 +294,7 @@ section {
 
 /* Static background pattern applied to the entire viewport */
 .pattern-background {
+    /* visibility: hidden; */
     /* padding: 24px; */
     position: absolute;
     top: 0;
@@ -287,7 +309,10 @@ section {
 }
 
 .circle-container {
+    /* visibility: hidden; */
+
     position: absolute;
+    top: 0;
     height: 100%;
     width: 75%;
     /* background-color: orange; */
@@ -428,19 +453,49 @@ section {
     stroke-width: 50px;
 }
 
+.ticker-pusher {
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: end;
+    height: 100%;
+    width: 100%;
+    pointer-events: none;
+    /* background-color: antiquewhite; */
+    z-index: 5000;
+}
+
 .ticker-wrapper {
     position: absolute;
+    /* position: sticky; */
+    top: 75%;
+    /* top: 50%; */
     display: flex;
+    /* flex-direction: column; */
     /* align-self: flex-end; */
-    align-items: end;
-    top: 0;
+    /* align-items: center; */
+    justify-content: center;
+    /* bottom: 0; */
     /* bottom: 15%; */
     display: flex;
-    width: 110%;
-    height: 50px;
-    /* scale: 75%; */
+    width: 100%;
+    height: fit-content;
+    /* height: fit-content; */
     /* background-color: rgb(133, 133, 163); */
     pointer-events: none;
+    z-index: 5000;
+}
+
+.ticker-container {
+
+    /* background-color: orange; */
+    display: flex;
+    /* flex-direction: column; */
+    width: 100%;
+    height: 200px;
+    z-index: 5000;
+    scale: 1.1;
+
 }
 
 .ticker-wrapper svg {
