--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ body {
 }
 
 main {
-    /* position: relative; */
+    position: relative;
     top: 0;
     height: 100dvh;
     width: 100%;
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
-    /* background-color: blue; */
+    background-color: blue;
     z-index: 10000;
 }
 
@@ -64,6 +64,7 @@ section {
     align-items: center;
     justify-content: space-between;
     overflow-x: hidden;
+    /* z-index: -200; */
     /* background-color: var(--unnaGreen); */
 }
 
@@ -455,18 +456,6 @@ section {
     stroke-width: 50px;
 }
 
-.ticker-pusher {
-    position: absolute;
-    top: 0;
-    display: flex;
-    align-items: end;
-    height: 100%;
-    width: 100%;
-    pointer-events: none;
-    /* background-color: antiquewhite; */
-    z-index: 5000;
-}
-
 .ticker-wrapper {
     position: absolute;
     /* position: sticky; */
@@ -490,7 +479,7 @@ section {
 
 .ticker-container {
     position: absolute;
-    bottom: 20%;
+    bottom: 50%;
 
     /* background-color: orange; */
     display: flex;
