--- a/style.css
+++ b/style.css
@@ -228,15 +228,16 @@ section {
 .photo-item {
     position: relative;
     /* display: flex; */
-    width: auto;
+    width: 100%;
 
     /* overflow: hidden; */
 }
 
 .photo-item img {
     position: relative;
-    border: 4px solid white;
-    /* border-radius: 48px; */
+    border: 1px solid white;
+    /* border-top: 4px solid white; */
+    border-radius: 24px;
     width: 100%;
     height: auto;
     object-fit: contain;
@@ -247,10 +248,10 @@ section {
 
 
 .photo-text {
-    font-size: 2rem;
+    font-size: 1.5rem;
     /* position: absolute; */
     top: 15%;
-    left: -8px;
+    padding-left: 16px;
     /* background-color:white; */
     color: var(--unnaGreen);
     color: white;
@@ -480,10 +481,18 @@ section {
     width: 100%;
     height: 100px;
     z-index: 5000;
+    rotate: 0deg;
     scale: 1.05;
     z-index: 10000;
+    transition: top 1.5s ease-in-out,
+                rotate 1.5s ease-in-out,
+                scale 1.5s ease-in-out;
+}
 
-
+.ticker-container.north {
+    rotate: 40deg;
+    top: 75px;
+    scale: 1.5;
 }
 
 .ticker-wrapper svg {
@@ -525,6 +534,11 @@ textPath {
     animation: scrollText 10s linear infinite;
 } */
 
+@media (max-height: 750px) {
+    .ticker-container {
+        top: 70%;
+    }
+}
 @media (min-width: 374px) {
     .logo img {
         height: 300px;
