--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     /* background-color: blue; */
-    z-index: 10000;
+    /* z-index: 10000; */
 }
 
 section {
@@ -127,7 +127,7 @@ section {
     /* scale: 2; */
     transform-origin: bottom;
     /* background-color: green; */
-    z-index: 1;
+    /* z-index: 1; */
     overflow: hidden;
 }
 
@@ -141,12 +141,12 @@ section {
 .unna-just-text {
     padding-right: 2px;
     padding-top: 16px;
-    z-index: 5000;
+    /* z-index: 5000; */
 
 }
 
 .nopat {
-    z-index: 3000;
+    /* z-index: 3000; */
     mix-blend-mode: screen;
     padding-bottom: 4px;
 }
@@ -159,7 +159,7 @@ section {
     background: url(/img/bg-pattern.png);
     background-size: 600%;
     clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
-    z-index: 1000;
+    /* z-index: 1000; */
     /* transform-origin: left; */
     /* transform: translate(-49%, 2px); */
     /* transform: translateY(-50%); */
@@ -323,7 +323,7 @@ section {
     width: 100%;
     height: 100%;
     background: url('/img/bg-pattern.png');
-    z-index: 0; /* Keep it behind the SVG */
+    /* z-index: 0; Keep it behind the SVG */
     /* clip-path: circle(0% at 0% 0%);
     -webkit-clip-path: circle(0% at 0% 0%); */
     pointer-events: none;
@@ -349,7 +349,7 @@ section {
     /* border-radius: 50%; */
     background: url('/img/bg-pattern.png');
     transition: 5s ease-in-out;
-    z-index: 100;
+    /* z-index: 100; */
     pointer-events: none; /* Ensure circles don't block interaction */
     /* filter: invert(1) sepia(1) saturate(10) hue-rotate(100deg); */
 }
@@ -483,7 +483,7 @@ section {
     /* height: fit-content; */
     /* background-color: rgb(133, 133, 163); */
     pointer-events: none;
-    z-index: 10000;
+    /* z-index: 10000; */
 }
 
 .ticker-container {
@@ -496,10 +496,10 @@ section {
     /* flex-direction: column; */
     width: 100%;
     height: 100px;
-    z-index: 5000;
+    /* z-index: 5000; */
     rotate: 0deg;
     scale: 1.05;
-    z-index: 10000;
+    /* z-index: 10000; */
     transition: top 1.5s ease-in-out,
                 rotate 1.5s ease-in-out,
                 scale 1.5s ease-in-out;
@@ -523,7 +523,7 @@ section {
     height: 150px;
     overflow: visible;
     /* stroke-width: 1px; */
-    z-index: 500;
+    /* z-index: 500; */
 }
 
 text {
