--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ main {
     width: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
+    /* overflow-y: hidden; */
+    /* scroll-behavior: unset; */
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     /* background-color: blue; */
